<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/coinImageSimMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        app:srcCompat="@mipmap/default1" />

    <TextView
        android:id="@+id/coin_detailed_info_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/coinImageSimMode"
        android:layout_centerHorizontal="true"
        android:text="@string/coin_name"
        android:textAppearance="@android:style/TextAppearance.Material.Title" />

    <TextView
        android:id="@+id/coin_detailed_info_symbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/coin_detailed_info_name"
        android:layout_centerHorizontal="true"
        android:text="TextView"
        android:textAppearance="@android:style/TextAppearance.Material.Subhead" />

    <TextView
        android:id="@+id/coin_detailed_info_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/coin_detailed_info_symbol"
        android:layout_centerHorizontal="true"
        android:text="TextView"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:paddingTop="25px"
        android:paddingBottom="25px"/>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/coin_detailed_info_price"
        android:layout_centerHorizontal="true"
        android:id="@+id/linear1">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10px">

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/coin_rank"
                android:gravity="center"/>

            <TextView
                android:id="@+id/coin_detailed_info_rank"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="TextView"
                android:textAppearance="@android:style/TextAppearance.Material.Medium" />

        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10px">

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/coin_percent_change"
                android:gravity="center"/>

            <TextView
                android:id="@+id/coin_detailed_info_percent_change"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="TextView"
                android:textAppearance="@android:style/TextAppearance.Material.Medium" />

        </android.support.v7.widget.LinearLayoutCompat>


    </android.support.v7.widget.LinearLayoutCompat>











    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear1"
        android:layout_centerHorizontal="true"
        android:id="@+id/linear2">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10px">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/coin_volume24"
                android:gravity="center"/>

            <TextView
                android:id="@+id/coin_detailed_info_volume24h"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="TextView"
                android:textAppearance="@android:style/TextAppearance.Material.Medium" />

        </android.support.v7.widget.LinearLayoutCompat>
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10px">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/coin_market_cap"
                android:gravity="center"/>

            <TextView
                android:id="@+id/coin_detailed_info_market_cap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="TextView"
                android:textAppearance="@android:style/TextAppearance.Material.Medium" />

        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v7.widget.LinearLayoutCompat>







    <android.support.v7.widget.LinearLayoutCompat
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/linear2"
    android:layout_centerHorizontal="true"
    android:id="@+id/linear3">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10px">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/coin_available_supply"
            android:gravity="center"/>

        <TextView
            android:id="@+id/coin_detailed_info_available_supply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="TextView"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    </android.support.v7.widget.LinearLayoutCompat>
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10px">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/coin_total_supply"
            android:gravity="center"/>

        <TextView
            android:id="@+id/coin_detailed_info_total_supply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="TextView"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v7.widget.LinearLayoutCompat>



    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear3"
        android:layout_centerHorizontal="true"
        android:id="@+id/linear4"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/coin_input"/>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10px">

        <Button
            android:id="@+id/buyCoinButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/coinBuy"
            android:inputType="number"/>

        <Button
            android:id="@+id/sellCoinButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/coinSell"
            android:inputType="number"/>

    </android.support.v7.widget.LinearLayoutCompat>

    </android.support.v7.widget.LinearLayoutCompat>



</RelativeLayout>